Sorting out google authentication

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,15 @@
                 android:layout_marginTop="30dp"
                 android:textSize="20sp"
                 app:cornerRadius = "20dp"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="Google sign in"
+                android:id="@+id/google_login_btn"
+                android:backgroundTint="@color/lightblue"
+                android:layout_marginTop="30dp"
+                android:textSize="20sp"
+                app:cornerRadius = "20dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
