--- a/app/src/main/res/layout/activity_habit_setup.xml
+++ b/app/src/main/res/layout/activity_habit_setup.xml
@@ -33,12 +33,33 @@
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="@color/lightblue"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Habit name"
+                android:layout_marginTop="20dp"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                android:textColor="@color/lightblue"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/lightblueborder"
+                android:padding="12dp"
+                android:id="@id/habit_name"
+                android:textSize="16sp"
+                android:layout_marginTop="5dp"
+                android:hint="Enter habit name"
+                android:inputType="text"
+                android:imeOptions="actionNext"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Habit type"
                 android:textSize="15sp"
+                android:layout_marginTop="20dp"
+
                 android:textAlignment="center"
                 android:textColor="@color/lightblue"/>
             <Spinner
@@ -61,11 +82,9 @@
                 android:id="@+id/habit_frequency_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/lightblueborder"
                 android:padding="8dp"/>
-
-            <!-- You can add additional UI elements for setting specific days or dates here -->
 
             <Button
                 android:layout_width="match_parent"
