--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,11 +37,11 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/login_username"
+                android:id="@+id/login_Email"
                 android:background="@drawable/lightblueborder"
                 android:layout_marginTop="40dp"
                 android:padding="8dp"
-                android:hint="username"
+                android:hint="Email"
                 android:textColor="@color/black"/>
 
 
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/signupRedirectText"
-                android:text="New user? Login"
+                android:text="New user? Sign up"
                 android:layout_gravity="center"
                 android:padding="30dp"
                 android:layout_marginTop="10dp"
