--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -24,6 +24,15 @@
             android:padding="24dp"
             android:background="@drawable/lightblueborder">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="daily quote"
+                android:id="@+id/daily_quote_text"
+                android:textSize="25sp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@color/lightblue"/>
 
             <TextView
                 android:layout_width="match_parent"
